ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopflow-ingress
  namespace: shopflow
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 4.253.14.243.nip.io
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: shopflow-backend
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopflow-frontend
            port:
              number: 80
